--- a/table.html
+++ b/table.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header>
+      <img src="./logo.png" width="200px" height="200px" />
       <li>
         <a href="index.html">
           Pasteleria el delicioso!!!!
